# simple_app

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  database.py  main.py  models.py  schemas.py
