[project]
name = "simple-app"
version = "0.0.1"
description = "A simple FastAPI application with Postgres and SQLAlchemy"
readme = "README.md"
authors = ["Geremias <geremiasbaudino@gmail.com>"]

requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114.2",
    "psycopg2>=2.9.9",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.30.6",
    "pydantic[email]>=2.9.1",
]

[project.optional-dependencies]
dev = ["pre-commit", "ipdb", "ruff>=0.6.6"]
test = ["pytest", "pytest-cov"]


[tool.pytest-cov]
fail_under = 95
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.pytest-cov.report]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]


[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "venv",
]

line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
ignore = []

